--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "no-OS-FatFS-SD-SPI-RPi-Pico"]
-	path = no-OS-FatFS-SD-SPI-RPi-Pico
+[submodule "lib/no-OS-FatFS-SD-SPI-RPi-Pico"]
+	path = lib/no-OS-FatFS-SD-SPI-RPi-Pico
 	url = https://github.com/carlk3/no-OS-FatFS-SD-SPI-RPi-Pico.git
-[submodule "pico-sdk"]
-	path = pico-sdk
+[submodule "lib/pico-sdk"]
+	path = lib/pico-sdk
 	url = https://github.com/raspberrypi/pico-sdk.git
