--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,24 @@
 [submodule "lib/no-OS-FatFS-SD-SPI-RPi-Pico"]
 	path = lib/no-OS-FatFS-SD-SPI-RPi-Pico
 	url = https://github.com/carlk3/no-OS-FatFS-SD-SPI-RPi-Pico.git
+	shallow = true
 [submodule "pico-sdk"]
 	path = pico-sdk
 	url = https://github.com/raspberrypi/pico-sdk.git
-	depth = 1
 	shallow = true
+
+[submodule "pico-sdk/tinyusb"]
+	path = pico-sdk/tinyusb
+	url = https://github.com/hathach/tinyusb.git
+[submodule "pico-sdk/lib/cyw43-driver"]
+	path = pico-sdk/lib/cyw43-driver
+	url = https://github.com/georgerobotics/cyw43-driver.git
+[submodule "pico-sdk/lib/lwip"]
+	path = pico-sdk/lib/lwip
+	url = https://github.com/lwip-tcpip/lwip.git
+[submodule "pico-sdk/lib/mbedtls"]
+	path = pico-sdk/lib/mbedtls
+	url = https://github.com/Mbed-TLS/mbedtls.git
+[submodule "pico-sdk/lib/btstack"]
+	path = pico-sdk/lib/btstack
+	url = https://github.com/bluekitchen/btstack.git
