--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,6 +94,24 @@ target_include_directories(${PROJECT_NAME}
         $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
 
+#=========================add tests============================ 
+# FetchContent added in CMake 3.11, downloads during the configure step
+# FetchContent_MakeAvailable was added in CMake 3.14; simpler usage
+include(FetchContent)
+
+# Testing only available if this is the main app
+# Note this needs to be done in the main CMakeLists
+# since it calls enable_testing, which must be in the
+# main CMakeLists.
+include(CTest)
+
+# Testing only available if this is the main app
+# Emergency override MODERN_CMAKE_BUILD_TESTING provided as well
+# if((CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME OR MODERN_CMAKE_BUILD_TESTING)
+#    AND BUILD_TESTING)
+#    endif()
+add_subdirectory(tests)
+
 
 #==================== linking submodules ====================  
 target_link_libraries(${PROJECT_NAME}
