added cmake to demos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,20 +97,20 @@ target_include_directories(${PROJECT_NAME}
 #=========================add tests============================ 
 # FetchContent added in CMake 3.11, downloads during the configure step
 # FetchContent_MakeAvailable was added in CMake 3.14; simpler usage
-include(FetchContent)
+# include(FetchContent)
 
 # Testing only available if this is the main app
 # Note this needs to be done in the main CMakeLists
 # since it calls enable_testing, which must be in the
 # main CMakeLists.
-include(CTest)
+# include(CTest)
 
 # Testing only available if this is the main app
 # Emergency override MODERN_CMAKE_BUILD_TESTING provided as well
 # if((CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME OR MODERN_CMAKE_BUILD_TESTING)
 #    AND BUILD_TESTING)
 #    endif()
-add_subdirectory(tests)
+# add_subdirectory(tests)
 
 
 #==================== linking submodules ====================  
@@ -233,3 +233,5 @@ set(public_headers
     HEADER
 )
 
+#==================== adding example====================s
+add_subdirectory(examples)
