fixed building usb output err

--- a/examples/hello_world/CMakeLists.txt
+++ b/examples/hello_world/CMakeLists.txt
@@ -3,6 +3,8 @@ add_executable(hello_world hello_world_demo.cpp)
 # pull in common dependencies
 target_link_libraries(hello_world pico_stdlib)
 
+pico_enable_stdio_usb(${PROJECT_NAME} 1)
+pico_enable_stdio_uart(${PROJECT_NAME} 1)
 # create u2f/map/bin/hex file etc.
 pico_add_extra_outputs(hello_world)
 
