--- a/examples/cli/input_and_output/CMakeLists.txt
+++ b/examples/cli/input_and_output/CMakeLists.txt
@@ -5,6 +5,8 @@ add_executable(${PROJECT_NAME} input_and_output.cpp)
 target_link_libraries(${PROJECT_NAME}
         pico_stdlib
         )
+pico_enable_stdio_usb(${PROJECT_NAME} 1)
+pico_enable_stdio_uart(${PROJECT_NAME} 1)
 
 # create u2f/map/bin/hex file etc.
 pico_add_extra_outputs(${PROJECT_NAME})
