--- a/examples/sd_card/CMakeLists.txt
+++ b/examples/sd_card/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_subdirectory(cli_sd_card)
 add_subdirectory(no-OS-FatFS-SD-lib)
-# add_subdirectory(save_load_files)
+add_subdirectory(save_load_files)
