--- a/examples/sd_card/save_load_files/CMakeLists.txt
+++ b/examples/sd_card/save_load_files/CMakeLists.txt
@@ -7,8 +7,10 @@ target_link_libraries(${PROJECT_NAME}
         rm_pico_dev
         )
 
+target_include_directories(${PROJECT_NAME} PRIVATE rm_pico_dev)
+
 pico_enable_stdio_usb(${PROJECT_NAME} 1)
-pico_enable_stdio_uart(${PROJECT_NAME} 1)
+pico_enable_stdio_uart(${PROJECT_NAME} 0)
 
 # create u2f/map/bin/hex file etc.
 pico_add_extra_outputs(${PROJECT_NAME})
