--- a/examples/cli/basic_shell/CMakeLists.txt
+++ b/examples/cli/basic_shell/CMakeLists.txt
@@ -7,6 +7,8 @@ target_link_libraries(${PROJECT_NAME}
         pico_stdio_usb
         )
 
+pico_enable_stdio_usb(${PROJECT_NAME} 1)
+pico_enable_stdio_uart(${PROJECT_NAME} 0)
 # create u2f/map/bin/hex file etc.
 pico_add_extra_outputs(${PROJECT_NAME})
 
