--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -222,6 +222,19 @@ target_link_libraries(${PROJECT_NAME} yaml-cpp)
 # target_link_libraries(${PROJECT_NAME} nlohmann_json::nlohmann_json)
 
 
+#====================google test====================  
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+# set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+# FetchContent_MakeAvailable(googletest)
+
+# add_subdirectory(test)
+
+#================================================== 
 
 # get every header file
 file(GLOB_RECURSE HEADER
