--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,10 +107,14 @@ target_include_directories(${PROJECT_NAME}
 
 # Testing only available if this is the main app
 # Emergency override MODERN_CMAKE_BUILD_TESTING provided as well
-# if((CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME OR MODERN_CMAKE_BUILD_TESTING)
-#    AND BUILD_TESTING)
-#    endif()
-# add_subdirectory(tests)
+# TODO:
+# if((CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME OR MODERN_CMAKE_BUILD_TESTING) AND BUILD_TESTING)
+#    add_subdirectory(tests)
+# endif()
+
+# if(TEST_BUILD)
+  add_subdirectory(test)
+# endif()
 
 
 #==================== linking submodules ====================  
